--- a/index.html
+++ b/index.html
@@ -47,18 +47,14 @@
                                 <input type="text" id="book-genre" class="add-book-input" name="book-genre" placeholder="Genre" maxlength="100">
                             </li>
                             <li class="add-book-input-container">
-                                <label for="date" class="add-book-label">Published</label>
-                                <input type="date" id="book-date" class="add-book-input" name="book-date">
-                            </li>
-                            <li class="add-book-input-container">
                                 <label for="pages" class="add-book-label">Pages</label>
                                 <input type="number" id="book-pages" class="add-book-input" name="book-pages" placeholder="Pages" max="2500">
                             </li>
                             <li class="add-book-input-container">
                                 <label for="status" class="add-book-label">Status</label>
                                 <select name="book-status" id="book-status" class="add-book-input">
-                                    <option value="0">Unread</option>
-                                    <option value="1">Read</option>
+                                    <option value="unread">Unread</option>
+                                    <option value="read">Read</option>
                                 </select>
                             </li>
                         </ul>
