Added ability to delete books from both the array and local storage

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <form action="" method="" id="book-form" class="book-form flex flex-columns align-items-center gap-md">
                         <ul>
                             <li class="book-input-container">
-                                <label for="book-title" class="">Title</label>
+                                <label for="book-title" class="book-label">Title</label>
                                 <input id="book-title" type="text" class="book-input" placeholder="Title" maxlength="100" required>
                             </li>
                             <li class="book-input-container">
