Toggle read status

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                             <li class="book-input-container">
                                 <label for="book-status" class="book-label">Read</label>
                                 <select id="book-status" class="book-input" name="book-status" required>
+                                    <option value="" disabled selected>Select status</option>
                                     <option value="Read">Yes</option>
                                     <option value="Not Read">No</option>
                                 </select>
